--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
           <div class="grid-image"><img src="images/afis/afis8.png" alt="Afiş 8"></div>
           <div class="grid-image"><img src="images/afis/afis9.png" alt="Afiş 9"></div>
           <div class="grid-image"><img src="images/afis/afis10.png" alt="Afiş 10"></div>
+          <div class="grid-image"><img src="images/afis/afis11.png" alt="Afiş 11"></div>
         </div>
         <div class="scroll-indicator scroll-right">
           <i class="fas fa-chevron-right"></i>
