Deneyim, hakkımda, CV

--- a/deneyim.html
+++ b/deneyim.html
@@ -3,28 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deneyim - Samet</title>
+  <title>Deneyim - Abdul Samet Dündar</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <nav class="navbar">
     <div class="logo">
-      <img src="logo-s.png" alt="Logo" style="height:1.6rem;vertical-align:middle;margin-right:0.4rem;filter:drop-shadow(0 0 12px #7f2bbf);border-radius:0.5rem;">
+      <img src="logo-s.png" alt="Logo" style="height:2.5rem;vertical-align:middle;margin-right:0.8rem;filter:drop-shadow(0 0 12px #7f2bbf);border-radius:0.5rem;">
       SAMET
     </div>
     <ul class="nav-links">
       <li><a href="index.html"><i class="fas fa-home"></i> Ana Sayfa</a></li>
-      <li><a href="hakkimda.html"><i class="fas fa-user"></i> Hakkımda</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle"><i class="fas fa-palette"></i> Portfolyo <i class="fas fa-chevron-down"></i></a>
         <ul class="dropdown-menu">
-          <li><a href="grafik-tasarim.html">Grafik Tasarım</a></li>
-          <li><a href="sosyal-medya.html">Sosyal Medya</a></li>
-          <li><a href="video-duzenleme.html">Video Düzenleme</a></li>
-          <li><a href="web-tasarim.html">Web Tasarım</a></li>
+          <li><a href="index.html#afis-infografik" class="scroll-link">Afiş & İnfografik</a></li>
+          <li><a href="index.html#eticaret" class="scroll-link">E-Ticaret Tasarımları</a></li>
+          <li><a href="index.html#dijital-pazarlama" class="scroll-link">Dijital Pazarlama</a></li>
+          <li><a href="index.html#logo" class="scroll-link">Logo Tasarımları</a></li>
+          <li><a href="index.html#model_3d" class="scroll-link">3D Model Tasarımları</a></li>
+          <li><a href="index.html#banner" class="scroll-link">Banner & Slider</a></li>
+          <li><a href="index.html#oyun" class="scroll-link">Oyun Geliştirme</a></li>
         </ul>
       </li>
+      <li><a href="hakkimda.html"><i class="fas fa-user"></i> Hakkımda</a></li>
       <li><a href="deneyim.html" class="active"><i class="fas fa-briefcase"></i> Deneyim</a></li>
       <li><a href="iletisim.html"><i class="fas fa-envelope"></i> İletişim</a></li>
     </ul>
@@ -41,87 +44,134 @@
         <div class="experience-timeline">
           <div class="experience-item">
             <div class="experience-date">
-              <span>2022 - Günümüz</span>
+              <span>Ocak 2025 - Mayıs 2025</span>
             </div>
             <div class="experience-content">
-              <h3>Kıdemli Grafik Tasarımcı</h3>
-              <h4>Dijital Medya Ajansı</h4>
+              <h3>Eğitim Teknoloğu</h3>
+              <h4>Cyber Otag Teknoloji A.Ş.</h4>
               <ul class="experience-details">
-                <li>Kurumsal müşteriler için marka kimliği ve görsel tasarım projeleri</li>
-                <li>Sosyal medya kampanyaları ve içerik stratejileri</li>
-                <li>Web sitesi tasarımı ve kullanıcı deneyimi optimizasyonu</li>
-                <li>Junior tasarımcılara mentorluk</li>
+                <li>İlköğretim programlarına yönelik eğitsel video e-içerik tasarımı ve üretimi</li>
+                <li>Senaryo yazımı ve storyboard tasarımı</li>
+                <li>Görsel/işitsel öğeler üretimi</li>
+                <li>Eğitsel uyarlama süreçlerine katkı</li>
+              </ul>
+              <div class="tools-used">
+                <span>Illustrator</span>
+                <span>Canva</span>
+                <span>Microsoft Office</span>
+               
+              </div>
+            </div>
+          </div>
+
+          <div class="experience-item">
+            <div class="experience-date">
+              <span>2024 - 2025</span>
+            </div>
+            <div class="experience-content">
+              <h3>Oyun Tasarımcısı</h3>
+              <h4>Saman Games</h4>
+              <ul class="experience-details">
+                <li>Bağımsız oyun geliştirme stüdyosunda yaratıcı ve eğlenceli dijital oyunlar geliştirme</li>
+                <li>Melon Merger: Meyve birleştirerek karpuza ulaşma oyunu</li>
+                <li>Mine Up: Minecraft temalı, "Only Up" tarzı yükselme oyunu</li>
+                <li>DualShot: Zombi ve iskelet temalı 2D aksiyon oyunu</li>
+                <li>Cellular Quest: Hücre yapısını keşfetmeye yönelik, eğitsel oyun</li>
+              </ul>
+              <div class="tools-used">
+                <span>Unity</span>
+                <span>Blender</span>
+                <span>Illustrator</span>
+                <span>Photoshop</span>
+                <span>Canva</span>
+                <span>Figma</span>
+                <span>Suno.ai</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="experience-item">
+            <div class="experience-date">
+              <span>2021 - 2022</span>
+            </div>
+            <div class="experience-content">
+              <h3>Robotik Eğitimi / Yardımcı Eğitmen</h3>
+              <h4>Bilgi Teknolojileri Kurumu</h4>
+              <ul class="experience-details">
+                <li>Çocuklara algoritma ve robotik kodlama eğitimi</li>
+                <li>Algoritmik düşünme ve problem çözme becerileri geliştirme</li>
+                <li>Robotik projeler geliştirme konularında destek</li>
+                <li>Yaratıcı ve uygulamalı öğrenme deneyimleri tasarlama</li>
+              </ul>
+              <div class="tools-used">
+                <span>Robotik Kodlama</span>
+                <span>Algoritma</span>
+                <span>Eğitim Teknolojileri</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="experience-item">
+            <div class="experience-date">
+              <span>2020 - 2025</span>
+            </div>
+            <div class="experience-content">
+              <h3>Freelance Tasarımcı & Eğitmen</h3>
+              <h4>Bağımsız Projeler</h4>
+              <ul class="experience-details">
+                <li>Grafik tasarım ve animasyon projeleri</li>
+                <li>3D modelleme ve oyun geliştirme</li>
+                <li>Eğitim içeriği tasarımı ve üretimi</li>
+                <li>UI/UX tasarımı ve web geliştirme</li>
               </ul>
               <div class="tools-used">
                 <span>Adobe Creative Suite</span>
+                <span>Blender</span>
+                <span>Unity</span>
                 <span>Figma</span>
-                <span>WordPress</span>
-                <span>After Effects</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="experience-item">
-            <div class="experience-date">
-              <span>2020 - 2022</span>
-            </div>
-            <div class="experience-content">
-              <h3>Grafik Tasarımcı</h3>
-              <h4>Kreatif Ajans</h4>
-              <ul class="experience-details">
-                <li>E-ticaret markaları için ürün görselleri ve kampanya tasarımları</li>
-                <li>Sosyal medya içerik üretimi ve yönetimi</li>
-                <li>Logo tasarımı ve kurumsal kimlik projeleri</li>
-              </ul>
-              <div class="tools-used">
-                <span>Photoshop</span>
-                <span>Illustrator</span>
-                <span>InDesign</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="experience-item">
-            <div class="experience-date">
-              <span>2019 - 2020</span>
-            </div>
-            <div class="experience-content">
-              <h3>Freelance Tasarımcı</h3>
-              <h4>Bağımsız Projeler</h4>
-              <ul class="experience-details">
-                <li>Küçük işletmeler için logo ve kurumsal kimlik tasarımı</li>
-                <li>Sosyal medya içerik tasarımı</li>
-                <li>Web sitesi arayüz tasarımı</li>
-              </ul>
-              <div class="tools-used">
-                <span>Adobe XD</span>
-                <span>Photoshop</span>
-                <span>Illustrator</span>
               </div>
             </div>
           </div>
         </div>
 
         <div class="certifications">
-          <h2>Sertifikalar</h2>
+          <h2>Eğitim</h2>
           <div class="certification-grid">
             <div class="certification-item">
-              <i class="fas fa-certificate"></i>
-              <h3>Adobe Certified Professional</h3>
-              <p>Adobe Creative Suite</p>
-              <span class="cert-date">2023</span>
+              <i class="fas fa-graduation-cap"></i>
+              <h3>Konya Lisesi</h3>
+              <p>Anadolu Lisesi</p>
+              <span class="cert-date">2017 - 2021</span>
+              <p>Diploma Notu: 90.02</p>
             </div>
             <div class="certification-item">
-              <i class="fas fa-certificate"></i>
-              <h3>UI/UX Design</h3>
-              <p>Google Digital Workshop</p>
-              <span class="cert-date">2022</span>
+              <i class="fas fa-graduation-cap"></i>
+              <h3>Hacettepe Üniversitesi</h3>
+              <p>Bilgisayar ve Öğretim Teknolojileri Eğitimi</p>
+              <span class="cert-date">2021 - 2025</span>
+              <p>GANO: 3.43</p>
             </div>
+          </div>
+        </div>
+
+        <div class="certifications">
+          <h2>Projeler</h2>
+          <div class="certification-grid">
             <div class="certification-item">
-              <i class="fas fa-certificate"></i>
-              <h3>Web Development</h3>
-              <p>Udemy</p>
-              <span class="cert-date">2021</span>
+              <i class="fas fa-project-diagram"></i>
+              <h3>SamuLearn</h3>
+              <p>Tasarımcı ve Proje Yöneticisi</p>
+              <span class="cert-date">2024 - 2025</span>
+              <ul class="experience-details">
+                <li>Programlama öğrenimini destekleyen etkileşimli eğitim platformu</li>
+                <li>Görev tabanlı ilerleme sistemi</li>
+                <li>Kişiselleştirilmiş öğrenci profilleri</li>
+                <li>Oyunlaştırılmış öğrenme deneyimi</li>
+              </ul>
+              <div class="project-images">
+                <img src="images/projects/samulearn1.png" alt="SamuLearn Arayüz" class="project-image">
+                <img src="images/projects/samulearn2.jpg" alt="SamuLearn Dashboard" class="project-image">
+              </div>
             </div>
           </div>
         </div>
@@ -129,13 +179,29 @@
     </div>
   </main>
 
+  <!-- Görsel Önizleme Modal -->
+  <div class="image-modal">
+    <div class="modal-content">
+      <img src="" alt="Modal Image">
+      <button class="close-modal">
+        <i class="fas fa-times"></i>
+      </button>
+      <button class="nav-btn prev-btn">
+        <i class="fas fa-chevron-left"></i>
+      </button>
+      <button class="nav-btn next-btn">
+        <i class="fas fa-chevron-right"></i>
+      </button>
+    </div>
+  </div>
+
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-section">
         <h3>İletişim</h3>
-        <p><i class="fas fa-envelope"></i> info@samet.com</p>
+        <p><i class="fas fa-envelope"></i> abdsametdundar84@gmail.com</p>
         <p><i class="fas fa-phone"></i> +90 543 743 67 01</p>
-        <p><i class="fas fa-map-marker-alt"></i> Konya, Türkiye</p>
+        <p><i class="fas fa-map-marker-alt"></i> Ankara, Çankaya</p>
       </div>
       <div class="footer-section">
         <h3>Sosyal Medya</h3>
@@ -147,17 +213,17 @@
         </div>
       </div>
       <div class="footer-section">
-        <h3>Hizmetler</h3>
+        <h3>Yetkinlikler</h3>
         <ul>
           <li>Grafik Tasarım</li>
-          <li>Web Tasarım</li>
-          <li>Sosyal Medya Yönetimi</li>
-          <li>Marka Danışmanlığı</li>
+          <li>UI/UX Tasarım</li>
+          <li>3D Modelleme</li>
+          <li>Oyun Geliştirme</li>
         </ul>
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2025 SAMET. Tüm hakları saklıdır.</p>
+      <p>&copy; 2025 Abdul Samet Dündar. Tüm hakları saklıdır.</p>
     </div>
   </footer>
 
