--- a/hakkimda.html
+++ b/hakkimda.html
@@ -3,28 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hakkımda - Samet</title>
+  <title>Hakkımda - Abdul Samet Dündar</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <nav class="navbar">
     <div class="logo">
-      <img src="logo-s.png" alt="Logo" style="height:1.8rem;vertical-align:middle;margin-right:0.5rem;filter:drop-shadow(0 0 12px #7f2bbf);border-radius:0.5rem;">
+      <img src="logo-s.png" alt="Logo" style="height:2.5rem;vertical-align:middle;margin-right:0.8rem;filter:drop-shadow(0 0 12px #7f2bbf);border-radius:0.5rem;">
       SAMET
     </div>
     <ul class="nav-links">
       <li><a href="index.html"><i class="fas fa-home"></i> Ana Sayfa</a></li>
-      <li><a href="hakkimda.html" class="active"><i class="fas fa-user"></i> Hakkımda</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle"><i class="fas fa-palette"></i> Portfolyo <i class="fas fa-chevron-down"></i></a>
         <ul class="dropdown-menu">
-          <li><a href="grafik-tasarim.html">Grafik Tasarım</a></li>
-          <li><a href="sosyal-medya.html">Sosyal Medya</a></li>
-          <li><a href="video-duzenleme.html">Video Düzenleme</a></li>
-          <li><a href="web-tasarim.html">Web Tasarım</a></li>
+          <li><a href="index.html#afis-infografik" class="scroll-link">Afiş & İnfografik</a></li>
+          <li><a href="index.html#eticaret" class="scroll-link">E-Ticaret Tasarımları</a></li>
+          <li><a href="index.html#dijital-pazarlama" class="scroll-link">Dijital Pazarlama</a></li>
+          <li><a href="index.html#logo" class="scroll-link">Logo Tasarımları</a></li>
+          <li><a href="index.html#model_3d" class="scroll-link">3D Model Tasarımları</a></li>
+          <li><a href="index.html#banner" class="scroll-link">Banner & Slider</a></li>
+          <li><a href="index.html#oyun" class="scroll-link">Oyun Geliştirme</a></li>
         </ul>
       </li>
+      <li><a href="hakkimda.html" class="active"><i class="fas fa-user"></i> Hakkımda</a></li>
       <li><a href="deneyim.html"><i class="fas fa-briefcase"></i> Deneyim</a></li>
       <li><a href="iletisim.html"><i class="fas fa-envelope"></i> İletişim</a></li>
     </ul>
@@ -38,17 +41,17 @@
       <section class="about-section">
         <div class="about-header">
           <div class="profile-image">
-            <img src="images/profile.jpeg" alt="Samet">
+            <img src="images/profile.jpeg" alt="Abdul Samet Dündar">
           </div>
           <div class="profile-info">
-            <h1>Merhaba, Ben Samet</h1>
-            <p class="title">Grafik Tasarımcı & Web Geliştirici</p>
+            <h1>Merhaba, Ben Abdul Samet Dündar</h1>
+            <p class="title">Eğitimci / Tasarımcı / Oyun Tasarımcısı</p>
             <div class="skills-tags">
-              <span>Adobe Photoshop</span>
-              <span>Adobe Illustrator</span>
-              <span>Adobe After Effects</span>
-              <span>HTML/CSS</span>
-              <span>JavaScript</span>
+              <span>Unity</span>
+              <span>Blender</span>
+              <span>Adobe Creative Suite</span>
+              <span>UI/UX Tasarım</span>
+              <span>Eğitsel Tasarım</span>
             </div>
           </div>
         </div>
@@ -56,22 +59,24 @@
         <div class="about-content">
           <div class="about-text">
             <h2>Hakkımda</h2>
-            <p>5 yıllık deneyimim ile grafik tasarım ve web geliştirme alanlarında yaratıcı çözümler üretiyorum. Markaların dijital varlıklarını güçlendirmek ve kullanıcı deneyimini en üst seviyeye çıkarmak için tutkuyla çalışıyorum.</p>
+            <p>Merhaba! Ben Abdul Samet Dündar, tasarım ve eğitim alanında tutkulu bir profesyonelim. Grafik tasarım, animasyonlar, 3D modelleme ve oyun geliştirme konularında geniş bir deneyime sahibim. Aynı zamanda eğitimci olarak, öğrencilere ilham vermeyi ve onları yaratıcı süreçlerde yönlendirmeyi seviyorum. Teknoloji ve estetiği bir araya getirerek, hem görsel iletişim projelerinde hem de eğitim içeriklerinde etkili çözümler sunuyorum.</p>
             
             <h2>Eğitim</h2>
             <div class="timeline">
               <div class="timeline-item">
-                <div class="date">2018 - 2022</div>
+                <div class="date">2021 - 2025</div>
                 <div class="content">
-                  <h3>Grafik Tasarım Lisans</h3>
-                  <p>Selçuk Üniversitesi</p>
+                  <h3>Hacettepe Üniversitesi</h3>
+                  <p>Bilgisayar ve Öğretim Teknolojileri Eğitimi</p>
+                  <p>GANO: 3.43</p>
                 </div>
               </div>
               <div class="timeline-item">
-                <div class="date">2017</div>
+                <div class="date">2017 - 2021</div>
                 <div class="content">
-                  <h3>Web Tasarım Sertifikası</h3>
-                  <p>Dijital Akademi</p>
+                  <h3>Konya Lisesi</h3>
+                  <p>Anadolu Lisesi</p>
+                  <p>Diploma Notu: 90.00</p>
                 </div>
               </div>
             </div>
@@ -79,21 +84,30 @@
             <h2>Yetenekler</h2>
             <div class="skills-grid">
               <div class="skill-category">
-                <h3>Tasarım</h3>
+                <h3>Tasarım & Geliştirme</h3>
                 <ul>
+                  <li>3D Modelleme</li>
+                  <li>Oyun Geliştirme</li>
                   <li>UI/UX Tasarım</li>
-                  <li>Logo & Kurumsal Kimlik</li>
-                  <li>Sosyal Medya Tasarımları</li>
-                  <li>Motion Graphics</li>
+                  <li>Grafik Tasarım</li>
                 </ul>
               </div>
               <div class="skill-category">
-                <h3>Yazılım</h3>
+                <h3>Eğitim Teknolojileri</h3>
                 <ul>
-                  <li>HTML5 & CSS3</li>
-                  <li>JavaScript</li>
-                  <li>Responsive Tasarım</li>
-                  <li>WordPress</li>
+                  <li>E-İçerik Geliştirme</li>
+                  <li>Eğitsel Tasarım</li>
+                  <li>Robotik Kodlama</li>
+                  <li>Eğitsel Oyun Tasarımı</li>
+                </ul>
+              </div>
+              <div class="skill-category">
+                <h3>Araçlar</h3>
+                <ul>
+                  <li>Unity & Blender</li>
+                  <li>Adobe Creative Suite</li>
+                  <li>Microsoft Office</li>
+                  <li>Figma & Canva</li>
                 </ul>
               </div>
             </div>
@@ -107,9 +121,9 @@
     <div class="footer-content">
       <div class="footer-section">
         <h3>İletişim</h3>
-        <p><i class="fas fa-envelope"></i> info@samet.com</p>
+        <p><i class="fas fa-envelope"></i> abdsametdundar84@gmail.com</p>
         <p><i class="fas fa-phone"></i> +90 543 743 67 01</p>
-        <p><i class="fas fa-map-marker-alt"></i> Konya, Türkiye</p>
+        <p><i class="fas fa-map-marker-alt"></i> Ankara, Çankaya</p>
       </div>
       <div class="footer-section">
         <h3>Sosyal Medya</h3>
@@ -121,17 +135,17 @@
         </div>
       </div>
       <div class="footer-section">
-        <h3>Hizmetler</h3>
+        <h3>Yetkinlikler</h3>
         <ul>
           <li>Grafik Tasarım</li>
-          <li>Web Tasarım</li>
-          <li>Sosyal Medya Yönetimi</li>
-          <li>Marka Danışmanlığı</li>
+          <li>UI/UX Tasarım</li>
+          <li>3D Modelleme</li>
+          <li>Oyun Geliştirme</li>
         </ul>
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2025 SAMET. Tüm hakları saklıdır.</p>
+      <p>&copy; 2025 Abdul Samet Dündar. Tüm hakları saklıdır.</p>
     </div>
   </footer>
 
