--- a/iletisim.html
+++ b/iletisim.html
@@ -3,28 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>İletişim - Samet</title>
+  <title>İletişim - Abdul Samet Dündar</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <nav class="navbar">
     <div class="logo">
-      <img src="logo-s.png" alt="Logo" style="height:1.6rem;vertical-align:middle;margin-right:0.4rem;filter:drop-shadow(0 0 12px #7f2bbf);border-radius:0.5rem;">
+      <img src="logo-s.png" alt="Logo" style="height:2.5rem;vertical-align:middle;margin-right:0.8rem;filter:drop-shadow(0 0 12px #7f2bbf);border-radius:0.5rem;">
       SAMET
     </div>
     <ul class="nav-links">
       <li><a href="index.html"><i class="fas fa-home"></i> Ana Sayfa</a></li>
-      <li><a href="hakkimda.html"><i class="fas fa-user"></i> Hakkımda</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle"><i class="fas fa-palette"></i> Portfolyo <i class="fas fa-chevron-down"></i></a>
         <ul class="dropdown-menu">
-          <li><a href="grafik-tasarim.html">Grafik Tasarım</a></li>
-          <li><a href="sosyal-medya.html">Sosyal Medya</a></li>
-          <li><a href="video-duzenleme.html">Video Düzenleme</a></li>
-          <li><a href="web-tasarim.html">Web Tasarım</a></li>
+          <li><a href="index.html#afis-infografik" class="scroll-link">Afiş & İnfografik</a></li>
+          <li><a href="index.html#eticaret" class="scroll-link">E-Ticaret Tasarımları</a></li>
+          <li><a href="index.html#dijital-pazarlama" class="scroll-link">Dijital Pazarlama</a></li>
+          <li><a href="index.html#logo" class="scroll-link">Logo Tasarımları</a></li>
+          <li><a href="index.html#model_3d" class="scroll-link">3D Model Tasarımları</a></li>
+          <li><a href="index.html#banner" class="scroll-link">Banner & Slider</a></li>
+          <li><a href="index.html#oyun" class="scroll-link">Oyun Geliştirme</a></li>
         </ul>
       </li>
+      <li><a href="hakkimda.html"><i class="fas fa-user"></i> Hakkımda</a></li>
       <li><a href="deneyim.html"><i class="fas fa-briefcase"></i> Deneyim</a></li>
       <li><a href="iletisim.html" class="active"><i class="fas fa-envelope"></i> İletişim</a></li>
     </ul>
@@ -43,7 +46,7 @@
             <div class="contact-card">
               <i class="fas fa-map-marker-alt"></i>
               <h3>Adres</h3>
-              <p>Konya, Türkiye</p>
+              <p>Ankara, Çankaya</p>
             </div>
             <div class="contact-card">
               <i class="fas fa-phone"></i>
@@ -53,7 +56,7 @@
             <div class="contact-card">
               <i class="fas fa-envelope"></i>
               <h3>E-posta</h3>
-              <p>info@samet.com</p>
+              <p>abdsametdundar84@gmail.com</p>
             </div>
             <div class="contact-social">
               <h3>Sosyal Medya</h3>
@@ -107,9 +110,9 @@
     <div class="footer-content">
       <div class="footer-section">
         <h3>İletişim</h3>
-        <p><i class="fas fa-envelope"></i> info@samet.com</p>
+        <p><i class="fas fa-envelope"></i> abdsametdundar84@gmail.com</p>
         <p><i class="fas fa-phone"></i> +90 543 743 67 01</p>
-        <p><i class="fas fa-map-marker-alt"></i> Konya, Türkiye</p>
+        <p><i class="fas fa-map-marker-alt"></i> Ankara, Çankaya</p>
       </div>
       <div class="footer-section">
         <h3>Sosyal Medya</h3>
@@ -121,17 +124,17 @@
         </div>
       </div>
       <div class="footer-section">
-        <h3>Hizmetler</h3>
+        <h3>Yetkinlikler</h3>
         <ul>
           <li>Grafik Tasarım</li>
-          <li>Web Tasarım</li>
-          <li>Sosyal Medya Yönetimi</li>
-          <li>Marka Danışmanlığı</li>
+          <li>UI/UX Tasarım</li>
+          <li>3D Modelleme</li>
+          <li>Oyun Geliştirme</li>
         </ul>
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2025 SAMET. Tüm hakları saklıdır.</p>
+      <p>&copy; 2025 Abdul Samet Dündar. Tüm hakları saklıdır.</p>
     </div>
   </footer>
 
